--- a/mainsite.css
+++ b/mainsite.css
@@ -7,12 +7,15 @@ main {
 }
 
 input {
-  border-style: none;
+  width: 23vh;
   font-size: 1.1vmax;
   color: rgb(65, 109, 167);
   padding-left: 1%;
   padding-right: 50%;
   font-family: 'Signika', sans-serif;
+  border-style: solid;
+  border-color: rgb(27, 79, 146);
+  border-width: 0.24vh;
 }
 
 .header {
@@ -46,7 +49,7 @@ button {
   font-size: 105%;
   border-style: solid;
   border-width: 0.2vmax;
-  border-color: rgb(65, 109, 167);
+  border-color: rgb(27, 79, 146);
   font-family: 'Signika', sans-serif;
 }
 
@@ -58,16 +61,18 @@ button:hover {
   display: grid;
   padding-left: 5%;
   padding-bottom: 10%;
+  padding-top: 7%;
   background-color: rgb(172, 209, 243);
   background-image: url("bakgrund.jpg");
   width: auto;
   border-style: solid;
   border-bottom: none;
+  border-width: 0.7vh;
   color: rgb(65, 109, 167);
   font-family: 'Signika', sans-serif;}
 
 .user-info {
-  color: rgb(48, 82, 128);
+  color: rgb(10, 33, 63);
   font-weight: 700;
   font-size: 2.3vh;
 }
@@ -75,28 +80,30 @@ button:hover {
 h2 {
   padding-left: 10%;
   padding-right: 27%;
-  padding-bottom: 15%;
   border-style: solid;
   border-left: none;
   background-color: rgb(172, 209, 243);
   background-image: url("bakgrund.jpg");
   width: 37.1vmax;
-  border-color: rgb(96, 141, 201);
+  border-color: rgb(27, 79, 146);
   font-family: 'Signika', sans-serif;
   font-weight: 700;
+  color: rgb(48, 82, 128);
 
 }
 
 .user-about {
   padding-left: 5%;
   padding-top: 5%;
+  padding-bottom: 3%;
   border-style: solid;
   background-color: rgb(172, 209, 243);
   background-image: url("bakgrund.jpg");
   width: auto;
-  color: rgb(43, 79, 126);
-  border-color: rgb(96, 141, 201);
+  color: rgb(10, 33, 63);
+  border-color: rgb(27, 79, 146);
   border-top: none;
+  border-width: 0.7vh;
   font-family: 'Signika', sans-serif;
   font-weight: 700;
   font-size: 2vh;
@@ -119,7 +126,7 @@ h2 {
   background-color: rgb(255, 255, 255);
   width: 10vmax;
   border-style: solid;
-  border-color: rgb(96, 141, 201);
+  border-color: rgb(27, 79, 146);
   font-family: 'Signika', sans-serif;
   font-size: 1.8vh;
   font-weight: bold;
@@ -127,21 +134,21 @@ h2 {
 
 .user-description {
   background-color: rgb(255, 255, 255);
-  width: 20vmax;
+  width: 30vmax;
   padding: 3%;
   border-style: solid;
-  border-color: rgb(96, 141, 201);
+  border-color: rgb(27, 79, 146);
   font-family: 'Signika', sans-serif;
   color: rgb(65, 109, 167);
 }
 
 .user-avatar {
   border-style: solid;
-  border-color: rgb(96, 141, 201);
+  border-color: rgb(27, 79, 146);
 }
 
 img {
   border-style: solid;
   border-width: 0.5vh;
-  border-color: rgb(64, 96, 138);
+  border-color: rgb(27, 79, 146);
 }
