--- a/mainsite.css
+++ b/mainsite.css
@@ -125,6 +125,7 @@ h2 {
   padding-top: 4%;
   background-color: rgb(255, 255, 255);
   width: 10vmax;
+  color: rgb(10, 33, 63);
   border-style: solid;
   border-color: rgb(27, 79, 146);
   font-family: 'Signika', sans-serif;
