--- a/mainsite.css
+++ b/mainsite.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Slackey&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Signika:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Signika:wght@600&display=swap");
 
 * {
   box-sizing: border-box;
@@ -11,7 +11,6 @@ main {
 }
 
 input {
-  width: 80%;
   font-size: 1.1vmax;
   color: rgb(65, 109, 167);
   padding-left: 1%;
